web-infras/parser/tests/fixtures/babel/es2022/class-private-names-duplicated/instance-set-instance-set/output.txt
[SyntaxError]: Duplicate private name. (3,7)
3|  set #x(_) {}
 |     ^
